# workerpool

./: Cargo.toml  README.md
src/: main.rs
src/static/: index.html
src/static/js/: worker.js
