[package]
name = "rust_wasm_workerpool"
version = "0.1.0"
authors = ["nekokuro0xf <kuro0xf@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.21"
wasm-bindgen = "0.2.44"
stdweb = "0.4.17"

[dependencies.web-sys]
version = "0.3.21"
features = [
  'ErrorEvent',
  'Event',
  'Worker',
  'MessageEvent',
]